--- a/index.html
+++ b/index.html
@@ -266,7 +266,10 @@
 	<div class="fl-col-content fl-node-content">
 	<div class="fl-module fl-module-photo fl-node-quri3lw19ayd" data-node="quri3lw19ayd">
 	<div class="fl-module-content fl-node-content">
-		
+		<div class="fl-photo fl-photo-align-center" itemscope itemtype="https://schema.org/ImageObject">
+	<div class="fl-photo-content fl-photo-img-png">
+				<img decoding="async" loading="lazy" class="fl-photo-img wp-image-24811 size-full" src="13b06ece959e9e95f0ff613b8bb0e61fb0ddb682.jpg" alt="Varsity Jackets data insights" itemprop="image" height="1452" width="2000" title="Varsity Jackets data insights" sizes="(max-width: 2714px) 100vw, 2714px" />
+					</div>
 	</div>
 	</div>
 </div>
